# begin /* Add examples' subdirectories */
# add_subdirectory(sssp)
# add_subdirectory(async_bfs)
# add_subdirectory(async_pr)
# add_subdirectory(async_sssp)
# add_subdirectory(async_apsp)
# add_subdirectory(bfs)
# add_subdirectory(color)
add_subdirectory(mgpu_test)
# end /* Add examples' subdirectories */
